--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,11 @@
-
+bleach==1.5.0
+Django==1.10.6
+enum34==1.1.6
+html5lib==0.9999999
+Markdown==2.6.11
+numpy==1.14.0
+protobuf==3.5.1
+Pygments==2.2.0
+pytz==2018.3
+six==1.11.0
+Werkzeug==0.14.1
